Arreglo de conceptos de facturacion2

--- a/sistema.ini
+++ b/sistema.ini
@@ -21,3 +21,5 @@ privatekey_prod =
 url_prod = https://wsaa.afip.gov.ar/ws/services/LoginCms
 url_homo = https://wsaahomo.afip.gov.ar/ws/services/LoginCms
 
+[FACTURA]
+empresa = Empresa
