--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Pillow==5.2.0
 PyAfipWs==2.7.0
 pycparser==2.18
 pycrypto==2.6.1
+pydns==2.3.6
 PyInstaller==3.3.1
 PyQt4==4.11.4
 PySimpleSOAP==1.8.14
@@ -28,4 +29,5 @@ pywin32==223
 rncryptor==3.2.0
 six==1.11.0
 typing==3.6.4
+validate-email==1.3
 XlsxWriter==1.0.4
