--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,21 @@
-aenum==2.1.2
-altgraph==0.15
-asn1crypto==0.24.0
-cffi==1.11.5
-cryptography==2.2.2
-cx-Freeze==5.1.1
-dbf==0.97.11
-dis3==0.1.2
-enum34==1.1.6
-fpdf==1.7
-future==0.16.0
+altgraph==0.17
+cffi==1.14.0
+cryptography==2.9.2
+dis3==0.1.3
+enum34==1.1.10
+fpdf==1.7.2
+future==0.18.2
 httplib2==0.9.2
-idna==2.6
-ipaddress==1.0.22
-M2Crypto==0.22.3
-macholib==1.9
-MySQL-python==1.2.5
-peewee==3.7.0
-pefile==2017.11.5
-Pillow==6.2.0
-PyAfipWs==2.7.0
-pycparser==2.18
-pycrypto==2.6.1
-pydns==2.3.6
-PyInstaller==3.3.1
-PyQt4==4.11.4
+ipaddress==1.0.23
+peewee==3.13.3
+pefile==2019.4.18
+Pillow==6.2.2
+pycparser==2.20
+PyInstaller==3.6
+PyMySQL==0.9.3
+PyQt4 @ file:///O:/python/fe/pyqt4/PyQt4-4.11.4-cp27-cp27m-win32.whl
 PySimpleSOAP==1.8.14
-pywin32==223
-rncryptor==3.2.0
-six==1.11.0
-typing==3.6.4
-validate-email==1.3
-XlsxWriter==1.0.4
+pywin32==227
+pywin32-ctypes==0.2.0
+six==1.15.0
+XlsxWriter==1.2.9
